--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,22 +1,201 @@
-.portfolio {
-  &__header {
-    display: flex;
-    justify-content: space-between;
-    margin: 4rem;
-    width: fit-content;
-    color: black;
-    border: 1px solid red;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
+  font-family: "Fira Sans", sans-serif;
+}
+
+a {
+  // color: black;
+  text-decoration: none;
+}
+
+.container {
+  width: 100%;
+  max-width: 1600px;
+  margin: 0 auto;
+  padding-left: 128px;
+  padding-right: 128px;
+
+  @media (max-width: 1024px) {
+    padding-left: 64px;
+    padding-right: 64px;
+  }
+
+  @media (max-width: 767px) {
+    padding-left: 32px;
+    padding-right: 32px;
   }
 }
 
-.header {
-  color: black;
+.hamburger {
+  position: relative;
+  display: block;
+  width: 35px;
+  cursor: pointer;
 
-  &__nav-list {
+  appearance: none;
+  background: none;
+  outline: none;
+  border: none;
+}
+
+.hamburger .bar,
+.hamburger:after,
+.hamburger:before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 5px;
+  background-color: #000;
+  border-radius: 5px;
+  margin: 6px 0px;
+  transition: 0.4s;
+}
+
+.hamburger.is-active:before {
+  transform: rotate(-45deg) translate(-8px, 6px);
+}
+
+.hamburger.is-active:after {
+  transform: rotate(45deg) translate(-9px, -8px);
+}
+
+.hamburger.is-active .bar {
+  opacity: 0;
+}
+
+.mobile-nav {
+  position: fixed;
+  top: 0;
+  left: 100%;
+  width: 100%;
+  min-height: 100vh;
+  display: block;
+  z-index: 98;
+  background-color: #12002f;
+  padding-top: 120px;
+  transition: 0.4s;
+}
+
+.mobile-nav.is-active {
+  left: 0;
+}
+
+.mobile-nav a {
+  display: block;
+  width: 100%;
+  max-width: 200px;
+  margin: 0 auto 16px;
+  text-align: center;
+  padding: 12px 16px;
+  background-color: #1f103f;
+
+  color: #fff;
+}
+
+.mobile-nav a:hover {
+  background-color: #24104f;
+}
+
+@media (min-width: 768px) {
+  .mobile-nav {
+    display: none;
+  }
+
+  .hamburger {
+    display: none;
+  }
+}
+
+section {
+  h2 {
+    text-align: center;
+    margin-bottom: 32px;
+    text-transform: uppercase;
+
+    color: #313131;
+    font-size: 36px;
+  }
+}
+
+.button {
+  appearance: none;
+  border: none;
+  outline: none;
+  background: none;
+
+  display: inline-block;
+  color: #000;
+  font-size: 18px;
+  background-color: skyblue;
+  padding: 12px 16px;
+  border-radius: 8px;
+  text-transform: capitalize;
+  font-weight: 700;
+  cursor: pointer;
+
+  @media (max-width: 767px) {
+    font-size: 18px;
+  }
+}
+
+img {
+  max-width: 100%;
+}
+
+header {
+  color: #fff;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 99;
+  background-color: #12002f;
+
+  .container {
+    padding-top: 32px;
+    padding-bottom: 32px;
     display: flex;
     justify-content: space-between;
-    width: 20rem;
-    height: 2rem;
-    border: 1px solid red;
+    align-items: center;
+    background-color: rgb(255, 255, 255);
+
+    h2 {
+      color: black;
+      text-transform: uppercase;
+      font-size: 32px;
+      font-weight: 900;
+      letter-spacing: -1.8px;
+      word-spacing: -4px;
+
+      span {
+        font-weight: 600;
+      }
+    }
+
+    nav {
+      display: grid;
+      grid-gap: 16px;
+      grid-template-columns: repeat(4, auto);
+
+      @media (max-width: 767px) {
+        display: none;
+      }
+
+      a {
+        color: black;
+        font-size: 20px;
+      }
+    }
+  }
+
+  &.is-scrolling {
+    background-color: #12002f;
+    .container {
+      padding-top: 16px;
+      padding-bottom: 16px;
+    }
   }
 }
