--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -1,5 +1,5 @@
 main {
-  section.banner {
+  .banner {
     color: #fff;
     position: relative;
     min-height: 100vh;
@@ -96,8 +96,8 @@ main {
       justify-content: space-around;
     }
 
-    &__description {
-    }
+    // &__description {
+    // }
 
     &__profile-img {
       // position: relative;
@@ -112,6 +112,7 @@ main {
       max-width: 1400px;
 
       .services-grid {
+        margin-top: 5rem;
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         grid-gap: 16px;
@@ -129,94 +130,82 @@ main {
           border-radius: 16px;
           overflow: hidden;
           box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.1);
+          max-width: 50%;
+        }
 
-          .img-box {
-            display: block;
-            width: 100%;
-            border-bottom: 5px solid #9feaff;
+        .content {
+          padding: 16px;
+        }
+      }
+    }
+  }
+}
 
-            .img {
-              display: block;
-              width: 100%;
-              height: 128px;
-              object-fit: cover;
-            }
+.projects {
+  background-color: rgb(133, 138, 208);
+  padding-top: 64px;
+  padding-bottom: 64px;
+
+  .projects-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 16px;
+    margin-bottom: 32px;
+
+    @media (max-width: 768px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media (max-width: 767px) {
+      grid-template-columns: 1fr;
+    }
+
+    .project {
+      // background-image: url("../images/project-img.jpg");
+      border-radius: 16px;
+      overflow: hidden;
+
+      .content {
+        filter: grayscale(1);
+        transition: 0.4s;
+        color: #fff;
+        padding: 16px;
+        background-color: rgba(24, 195, 172, 0.8);
+
+        // &__1 {
+        //   background: no-repeat;
+        //   background-image: url(../../assets/images/maesurf.png);
+        //   background-size: 100%;
+        // }
+
+        h3 {
+          font-size: 32px;
+          margin-bottom: 16px;
+
+          @media (max-width: 1024px) {
+            font-size: 28px;
           }
+        }
 
-          .content {
-            padding: 16px;
+        p {
+          font-size: 18px;
+          margin-bottom: 16px;
+
+          @media (max-width: 1024px) {
+            font-size: 16px;
           }
+        }
+      }
+
+      &:hover {
+        .content {
+          filter: grayscale(0);
         }
       }
     }
   }
 
-  .projects {
-    background-color: rgb(133, 138, 208);
-    padding-top: 64px;
-    padding-bottom: 64px;
-
-    .projects-grid {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-gap: 16px;
-      margin-bottom: 32px;
-
-      @media (max-width: 768px) {
-        grid-template-columns: repeat(2, 1fr);
-      }
-
-      @media (max-width: 767px) {
-        grid-template-columns: 1fr;
-      }
-
-      .project {
-        // background-image: url("../images/project-img.jpg");
-        border-radius: 16px;
-        overflow: hidden;
-
-        .content {
-          filter: grayscale(1);
-          transition: 0.4s;
-          color: #fff;
-          padding: 16px;
-          background-color: rgba(24, 195, 172, 0.8);
-
-          // &__1 {
-          //   background: no-repeat;
-          //   background-image: url(../../assets/images/maesurf.png);
-          //   background-size: 100%;
-          // }
-
-          h3 {
-            font-size: 32px;
-            margin-bottom: 16px;
-
-            @media (max-width: 1024px) {
-              font-size: 28px;
-            }
-          }
-
-          p {
-            font-size: 18px;
-            margin-bottom: 16px;
-
-            @media (max-width: 1024px) {
-              font-size: 16px;
-            }
-          }
-        }
-
-        &:hover {
-          .content {
-            filter: grayscale(0);
-          }
-        }
-      }
-    }
-
-    .center {
-      text-align: center;
-    }
+  .center {
+    text-align: center;
   }
 }
