--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,16 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-
-  font-family: "Fira Sans", sans-serif;
-}
-
-a {
-  // color: black;
-  text-decoration: none;
-}
-
 .container {
   width: 100%;
   max-width: 1600px;
@@ -75,14 +62,14 @@ a {
   z-index: 99;
   background-color: #12002f;
   padding-top: 120px;
-  transition: 0.4s;
+  transition: 0.9s;
 }
 
-.mobile-nav {
+.mobile-nav.is-active {
   left: 0;
 }
 
-.mobile-link {
+.mobile-navlink {
   display: block;
   width: 100%;
   max-width: 200px;
@@ -95,7 +82,7 @@ a {
   color: #fff;
 }
 
-.mobile-link:hover {
+.mobile-navlink:hover {
   // background-color: #12002f;
   background-color: #595cb0;
   transition: 0.8s ease-in;
