--- a/src/App.scss
+++ b/src/App.scss
@@ -1,1 +1,19 @@
 @use "./styles/partials/_globals.scss" as *;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
+  font-family: "Fira Sans", sans-serif;
+}
+
+span {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+html {
+  scroll-behavior: smooth;
+}
