scroll function added

--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -107,6 +107,7 @@ main {
     }
 
     &__container {
+      margin: 5rem;
       padding-top: 64px;
       padding-bottom: 64px;
       max-width: 1400px;
