--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -51,12 +51,7 @@ main {
       }
     }
 
-    .wrapper {
-      // position: absolute;
-      // top: 50%;
-      // left: 50%;
-      // transform: translate(-50%, -50%);
-
+    .infinite {
       &__title {
         padding: 0;
         margin: 0;
@@ -84,6 +79,10 @@ main {
         }
       }
     }
+  }
+
+  img {
+    max-width: 100%;
   }
 
   .about {
@@ -204,9 +203,5 @@ main {
         }
       }
     }
-  }
-
-  .center {
-    text-align: center;
   }
 }
