Added in background image to the body, adjusting color scheme

--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -6,7 +6,7 @@ main {
     display: flex;
     align-items: center;
 
-    // background-image: url("../images/header.jpg");
+    background-image: url("../../assets/images/RedwoodsNationalPark.jpeg");
     background-position: top right;
     background-size: cover;
 
@@ -19,7 +19,7 @@ main {
       right: 0;
       bottom: 0;
       z-index: 0;
-      background-color: #242c9b;
+      background-color: #126551;
       opacity: 0.8;
     }
 
