--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -32,7 +32,7 @@ main {
         margin-bottom: 32px;
 
         span {
-          color: #14f0dab3;
+          color: #fff200db;
         }
 
         @media (max-width: 767px) {
@@ -81,125 +81,127 @@ main {
     }
   }
 
-  img {
-    max-width: 100%;
-  }
-
   .about {
-    background-color: #eee;
+    background-color: #fff;
     display: flex;
-    justify-content: center;
-
-    &__content {
-      display: flex;
-      justify-content: space-around;
-    }
-
-    // &__description {
-    // }
-
-    &__profile-img {
-      // position: relative;
-      // top: 4rem;
-      // left: 15rem;
-      border-radius: 50%;
-    }
 
     &__container {
       margin: 5rem;
       padding-top: 64px;
       padding-bottom: 64px;
       max-width: 1400px;
+    }
 
-      .services-grid {
-        margin-top: 5rem;
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        grid-gap: 16px;
+    &__content {
+      display: flex;
+      justify-content: space-around;
+    }
+    // &__content-text {}
+    // &__description {}
 
-        @media (max-width: 1024px) {
-          grid-template-columns: repeat(2, 1fr);
+    // &__profile {}
+
+    // profile image
+    &__mugshot {
+      border-radius: 50%;
+      max-width: 80%;
+    }
+
+    .techstack {
+      &__icon {
+        width: 100%;
+      }
+    }
+
+    .services-grid {
+      margin-top: 5rem;
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      grid-gap: 16px;
+
+      @media (max-width: 1024px) {
+        grid-template-columns: repeat(2, 1fr);
+      }
+
+      @media (max-width: 767px) {
+        grid-template-columns: 1fr;
+      }
+
+      .service {
+        overflow: hidden;
+        max-width: 40%;
+
+        &__spacer {
+          min-height: 25px;
         }
+      }
 
-        @media (max-width: 767px) {
-          grid-template-columns: 1fr;
-        }
-
-        .service {
-          background-color: #fff;
-          border-radius: 16px;
-          overflow: hidden;
-          box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.1);
-          max-width: 50%;
-        }
-
-        .content {
-          padding: 16px;
-        }
+      .content {
+        padding: 16px;
       }
     }
   }
-}
 
-.projects {
-  background-color: rgb(133, 138, 208);
-  padding-top: 64px;
-  padding-bottom: 64px;
+  .projects {
+    background-color: rgb(133, 138, 208);
+    padding-top: 64px;
+    padding-bottom: 64px;
 
-  .projects-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 16px;
-    margin-bottom: 32px;
+    .projects-grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-gap: 16px;
+      margin-bottom: 32px;
 
-    @media (max-width: 768px) {
-      grid-template-columns: repeat(2, 1fr);
-    }
-
-    @media (max-width: 767px) {
-      grid-template-columns: 1fr;
-    }
-
-    .project {
-      // background-image: url("../images/project-img.jpg");
-      border-radius: 16px;
-      overflow: hidden;
-
-      .content {
-        filter: grayscale(1);
-        transition: 0.4s;
-        color: #fff;
-        padding: 16px;
-        background-color: rgba(24, 195, 172, 0.8);
-
-        // &__1 {
-        //   background: no-repeat;
-        //   background-image: url(../../assets/images/maesurf.png);
-        //   background-size: 100%;
-        // }
-
-        h3 {
-          font-size: 32px;
-          margin-bottom: 16px;
-
-          @media (max-width: 1024px) {
-            font-size: 28px;
-          }
-        }
-
-        p {
-          font-size: 18px;
-          margin-bottom: 16px;
-
-          @media (max-width: 1024px) {
-            font-size: 16px;
-          }
-        }
+      @media (max-width: 768px) {
+        grid-template-columns: repeat(2, 1fr);
       }
 
-      &:hover {
+      @media (max-width: 767px) {
+        grid-template-columns: 1fr;
+      }
+
+      .project {
+        // background-image: url("../images/project-img.jpg");
+        border-radius: 16px;
+        overflow: hidden;
+
         .content {
-          filter: grayscale(0);
+          filter: grayscale(1);
+          transition: 0.4s;
+          color: #fff;
+          padding: 16px;
+          background-color: rgba(24, 195, 172, 0.8);
+
+          // &__1 {
+          //   background: no-repeat;
+          //   background-image: url(../../assets/images/maesurf.png);
+          //   background-size: 100%;
+          // }
+
+          h3 {
+            font-size: 32px;
+            margin-bottom: 16px;
+
+            @media (max-width: 1024px) {
+              font-size: 28px;
+            }
+          }
+
+          p {
+            font-size: 18px;
+            margin-bottom: 16px;
+
+            @media (max-width: 1024px) {
+              font-size: 16px;
+            }
+          }
+        }
+
+        &:hover {
+          .content {
+            filter: grayscale(0);
+          }
         }
       }
     }
