--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -15,13 +15,6 @@ header {
     background-color: rgb(255, 255, 255);
 
     h2 {
-      // color: black;
-      // text-transform: uppercase;
-      // font-size: 32px;
-      // font-weight: 900;
-      // letter-spacing: -1.8px;
-      // word-spacing: -4px;
-
       color: black;
       text-transform: uppercase;
       font-size: 35px;
@@ -56,7 +49,7 @@ header {
 
   nav ul li {
     display: inline-block;
-    margin-left: 1rem;
+    margin-left: 3.5rem;
   }
 
   /* stroke */
@@ -71,16 +64,16 @@ header {
     right: 0;
     margin: auto;
     width: 0%;
-    height: 3px;
+    height: 2px;
     color: transparent;
-    background: rgb(80, 86, 176);
+    background: rgb(0, 0, 0);
     transition: all 0.5s;
   }
   nav ul li span:hover:after {
     width: 100%;
   }
 
-  &.is-scrolling {
+  .is-scrolling {
     background-color: #12002f;
     .container {
       padding-top: 16px;
