--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -36,7 +36,10 @@ main {
         }
 
         @media (max-width: 767px) {
-          font-size: 32px;
+          font-size: 50px;
+        }
+        @media (max-width: 425px) {
+          font-size: 40px;
         }
       }
 
@@ -45,8 +48,8 @@ main {
         font-weight: 700;
         margin-bottom: 32px;
 
-        @media (max-width: 767px) {
-          font-size: 20px;
+        @media (max-width: 425px) {
+          font-size: 28px;
         }
       }
     }
@@ -83,23 +86,68 @@ main {
 
   .about {
     background-color: #fff;
-    display: flex;
+
+    @media (min-width: 768px) {
+      margin-top: 12rem;
+    }
 
     &__container {
-      margin: 5rem;
+      // margin: 5rem;
       padding-bottom: 64px;
       max-width: 1400px;
+
+      @media (max-width: 1024px) {
+        margin: 2rem;
+      }
+
+      @media (max-width: 767px) {
+        // margin: 2rem;
+        padding-bottom: 64px;
+        max-width: 1400px;
+      }
+
+      @media (max-width: 425px) {
+        margin: 0;
+      }
     }
 
     &__content {
       display: flex;
       justify-content: space-between;
-      gap: 1rem;
+
+      @media (max-width: 1024px) {
+        display: flex;
+        margin-top: 4rem;
+      }
+
+      @media (max-width: 767px) {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+      }
+
+      @media (max-width: 425px) {
+        // display: flex;
+        // flex-direction: column;
+        // justify-content: space-between;
+      }
 
       &--text {
         width: 50%;
-        padding: 2rem;
-        margin: 2rem 0;
+        // padding: 2rem;
+        // margin: 2rem 0;
+
+        @media (max-width: 767px) {
+          width: 100%;
+          margin-top: 3rem;
+          order: 1;
+        }
+
+        @media (max-width: 425px) {
+          width: 100%;
+          padding: 1rem;
+          // order: 1;
+        }
       }
     }
 
@@ -108,47 +156,114 @@ main {
     }
 
     &__profile {
-      width: 40%;
-      position: relative;
-      top: 5rem;
-      left: 5rem;
+      // width: 40%;
+      // position: relative;
+      // top: 5rem;
+      // left: 5rem;
+
+      @media (max-width: 1024px) {
+      }
+      @media (max-width: 767px) {
+        margin: 0 auto;
+      }
+
+      @media (max-width: 425px) {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 2rem;
+      }
     }
 
     // profile image
     &__headshot {
-      border-radius: 50%;
-      width: 20rem;
+      @media (max-width: 1024px) {
+        border-radius: 50%;
+        width: 20rem;
+      }
+
+      @media (max-width: 767px) {
+        // border-radius: 50%;
+        // width: 20rem;
+      }
+
+      @media (max-width: 425px) {
+        border-radius: 50%;
+        width: 100%;
+        padding: 2rem;
+      }
     }
   }
 
   .techstack {
-    margin-top: 10rem;
-    &__icon {
-      width: 100%;
-    }
-  }
-
-  .services-grid {
-    margin-top: 5rem;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-gap: 16px;
-
     @media (max-width: 1024px) {
-      grid-template-columns: repeat(2, 1fr);
+      // margin-top: 10rem;
+      margin-top: 5rem;
     }
 
-    @media (max-width: 767px) {
-      grid-template-columns: 1fr;
+    @media (max-width: 425px) {
+      padding: 1rem;
+      margin-top: 3rem;
     }
 
-    .service {
-      overflow: hidden;
-      max-width: 40%;
-
-      &__spacer {
-        min-height: 25px;
+    // sizing the icon itself
+    &__icon {
+      @media (max-width: 1024px) {
+        width: 75%;
       }
+      @media (max-width: 767px) {
+        // width: 75%;
+      }
+      @media (max-width: 425px) {
+        width: 100%;
+      }
+    }
+
+    &__services-grid {
+      // margin-top: 5rem;
+      // display: grid;
+      // grid-template-columns: repeat(5, 1fr);
+      // grid-gap: 16px;
+
+      @media (max-width: 1024px) {
+        margin-top: 5rem;
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-gap: 16px;
+      }
+
+      @media (max-width: 767px) {
+        grid-template-columns: repeat(2, 1fr);
+      }
+
+      @media (max-width: 425px) {
+        margin-top: 2rem;
+      }
+
+      // sizing the icon container itself
+      &__service {
+        // overflow: hidden;
+        // max-width: 40%;
+        display: flex;
+        justify-content: center;
+
+        @media (max-width: 1024px) {
+          overflow: hidden;
+          max-width: 40%;
+        }
+        @media (max-width: 767px) {
+          max-width: 30%;
+        }
+
+        @media (max-width: 425px) {
+          padding: 1rem;
+          max-width: 100%;
+        }
+      }
+    }
+    &__spacer {
+      min-height: 25px;
     }
 
     .content {
