--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -17,9 +17,15 @@ header {
     h2 {
       color: black;
       text-transform: uppercase;
-      font-size: 35px;
       font-weight: 300;
       letter-spacing: -2.5px;
+
+      @media (max-width: 375px) {
+        font-size: 26px;
+      }
+      @media (min-width: 425px) {
+        font-size: 35px;
+      }
 
       span {
         font-weight: 600;
@@ -50,6 +56,14 @@ header {
   nav ul li {
     display: inline-block;
     margin-left: 3.5rem;
+
+    @media (max-width: 1024px) {
+      margin-left: 1.5rem;
+    }
+
+    // @media (max-width: 767px) {
+    //   margin-left: 1.5rem;
+    // }
   }
 
   /* stroke */
