--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -19,8 +19,8 @@ main {
       right: 0;
       bottom: 0;
       z-index: 0;
-      background-color: #126551;
-      opacity: 0.8;
+      background-color: #000;
+      opacity: 0.5;
     }
 
     .container {
@@ -86,23 +86,15 @@ main {
 
   .about {
     background-color: #fff;
-    border: 1px solid red;
-
-    @media (min-width: 768px) {
-      margin-top: 12rem;
-    }
+    border: 1px solid transparent;
 
     &__container {
-      // margin: 5rem;
-      padding-bottom: 64px;
-      max-width: 1400px;
-
       @media (max-width: 2000px) {
-        margin: 2rem;
+        padding-top: 2rem;
+        margin-top: 2rem;
       }
 
       @media (max-width: 767px) {
-        // margin: 2rem;
         padding-bottom: 64px;
         max-width: 1400px;
       }
@@ -117,26 +109,21 @@ main {
       justify-content: space-between;
 
       @media (max-width: 2000px) {
-        display: flex;
+        // display: flex;
         margin-top: 4rem;
       }
 
       @media (max-width: 767px) {
-        display: flex;
+        // display: flex;
         flex-direction: column;
         justify-content: space-between;
       }
 
       @media (max-width: 425px) {
-        // display: flex;
-        // flex-direction: column;
-        // justify-content: space-between;
       }
 
       &--text {
         width: 50%;
-        // padding: 2rem;
-        // margin: 2rem 0;
 
         @media (max-width: 767px) {
           width: 100%;
@@ -146,7 +133,7 @@ main {
 
         @media (max-width: 425px) {
           width: 100%;
-          padding: 1rem;
+          // padding: 1rem;
           // order: 1;
         }
       }
@@ -192,90 +179,78 @@ main {
       @media (max-width: 425px) {
         border-radius: 50%;
         width: 100%;
-        padding: 2rem;
+        // padding: 2rem;
       }
-    }
-  }
-
-  .techstack {
-    @media (max-width: 2000px) {
-      // margin-top: 10rem;
-      margin-top: 5rem;
-    }
-
-    @media (max-width: 425px) {
-      padding: 1rem;
-      margin-top: 3rem;
-    }
-
-    // sizing the icon itself
-    &__icon {
-      @media (max-width: 2000px) {
-        width: 75%;
-      }
-      @media (max-width: 767px) {
-        // width: 75%;
-      }
-      @media (max-width: 425px) {
-        width: 100%;
-      }
-    }
-
-    &__services-grid {
-      // margin-top: 5rem;
-      // display: grid;
-      // grid-template-columns: repeat(5, 1fr);
-      // grid-gap: 16px;
-
-      @media (max-width: 2000px) {
-        margin-top: 5rem;
-        display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        grid-gap: 16px;
-      }
-
-      @media (max-width: 767px) {
-        grid-template-columns: repeat(2, 1fr);
-      }
-
-      @media (max-width: 425px) {
-        margin-top: 2rem;
-      }
-    }
-
-    // sizing the icon container itself
-    &__service {
-      // overflow: hidden;
-      // max-width: 40%;
-      display: flex;
-      justify-content: center;
-
-      @media (max-width: 2000px) {
-        overflow: hidden;
-        // max-width: 40%;
-      }
-      @media (max-width: 767px) {
-        // max-width: 30%;
-      }
-
-      @media (max-width: 425px) {
-        padding: 1rem;
-        max-width: 100%;
-      }
-    }
-
-    &__spacer {
-      min-height: 25px;
-    }
-
-    .content {
-      padding: 16px;
     }
   }
 }
 
+.techstack {
+  @media (max-width: 2000px) {
+    margin: 5rem 0;
+  }
+
+  @media (max-width: 425px) {
+    padding: 1rem;
+    margin-top: 3rem;
+  }
+
+  // sizing the icon itself
+  &__icon {
+    @media (max-width: 2000px) {
+      width: 75%;
+    }
+    @media (max-width: 767px) {
+    }
+    @media (max-width: 425px) {
+      width: 100%;
+    }
+  }
+
+  &__services-grid {
+    @media (max-width: 2000px) {
+      margin-top: 5rem;
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      grid-gap: 16px;
+    }
+
+    @media (max-width: 767px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media (max-width: 425px) {
+      margin-top: 2rem;
+    }
+  }
+
+  // sizing the icon container itself
+  &__service {
+    display: flex;
+    justify-content: center;
+
+    @media (max-width: 2000px) {
+    }
+    @media (max-width: 767px) {
+    }
+
+    @media (max-width: 425px) {
+      padding: 1rem;
+      max-width: 100%;
+    }
+  }
+
+  &__spacer {
+    min-height: 25px;
+  }
+
+  .content {
+    padding: 16px;
+  }
+}
+
 .projects {
-  background-color: rgb(133, 138, 208);
+  // background-color: rgb(133, 138, 208);
   padding-top: 64px;
   padding-bottom: 64px;
 
@@ -297,6 +272,12 @@ main {
       // background-image: url("../images/project-img.jpg");
       border-radius: 16px;
       overflow: hidden;
+
+      &:hover {
+        .content {
+          filter: grayscale(0);
+        }
+      }
 
       .content {
         filter: grayscale(1);
@@ -327,12 +308,6 @@ main {
           @media (max-width: 2000px) {
             font-size: 16px;
           }
-        }
-      }
-
-      &:hover {
-        .content {
-          filter: grayscale(0);
         }
       }
     }
