--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -58,9 +58,11 @@
     justify-content: space-between;
     align-items: center;
     margin: 3rem 0;
+    max-width: 250px;
 
     @include tablet {
       width: 20rem;
+      max-width: 500px;
     }
   }
 
