--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -2,10 +2,10 @@
 @use "../../styles/partials/_mixins.scss" as *;
 
 .contact {
-  background-color: #110e15;
+  background-color: #285276;
 
   &__container {
-    padding-top: 64px;
+    padding-top: 32px;
     padding-bottom: 64px;
 
     h2 {
@@ -14,43 +14,11 @@
   }
 
   &__title {
-    font-size: 32px;
+    font-size: 42px;
     letter-spacing: 1px;
     font-weight: 500;
-    padding: 0.5rem 0;
-  }
-
-  // &__testbox {}
-
-  &__container-wrapper {
-    display: flex;
-    flex-direction: column;
-    color: $primary-white;
-    flex-wrap: wrap;
-    margin-inline: auto;
-
-    @include tablet {
-      flex-direction: row;
-    }
-  }
-
-  &__contentbox {
-    padding-top: 1rem;
-    margin: 1rem 0;
-    width: 15rem;
-
-    @include tablet {
-      width: 20rem;
-    }
-  }
-
-  &__text {
-    color: white;
-    margin: 0.5rem 0;
-  }
-
-  &__email {
-    color: $primary-white;
+    text-transform: capitalize;
+    margin: 0;
   }
 
   &__social {
@@ -62,44 +30,33 @@
 
     @include tablet {
       width: 20rem;
-      max-width: 500px;
+      max-width: 400px;
     }
   }
 
   &__handle {
-    width: 3rem;
-  }
-
-  &__copyright-box {
-    display: flex;
-    flex-flow: row wrap;
-    // width: 15rem;
-
-    @include tablet {
-      display: flex;
-      justify-content: space-between;
-      width: 30rem;
-      margin-top: 2rem;
-    }
-  }
-
-  &__copyright {
-    font-size: 12px;
+    width: 3.5rem;
   }
 
   &__acknowledgements {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     margin-top: 0.5rem;
+    color: rgba(255, 255, 255, 0.478);
 
     @include tablet {
       margin: 0;
     }
   }
+
+  &__copyright {
+    font-size: 12px;
+    text-align: center;
+  }
 }
 
 .site-footer-divider {
-  background: rgba(255, 255, 255, 0.998);
+  background: rgba(255, 255, 255, 0.478);
   height: 1px;
   width: 100%;
   border: none;
