--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -109,12 +109,10 @@ main {
       justify-content: space-between;
 
       @media (max-width: 2000px) {
-        // display: flex;
         margin-top: 4rem;
       }
 
       @media (max-width: 767px) {
-        // display: flex;
         flex-direction: column;
         justify-content: space-between;
       }
@@ -133,8 +131,6 @@ main {
 
         @media (max-width: 425px) {
           width: 100%;
-          // padding: 1rem;
-          // order: 1;
         }
       }
     }
@@ -143,12 +139,12 @@ main {
       line-height: 1.8;
     }
 
-    &__profile {
-      // width: 40%;
-      // position: relative;
-      // top: 5rem;
-      // left: 5rem;
+    &__inner-text {
+      margin-bottom: 1rem;
+      letter-spacing: 1px;
+    }
 
+    &__profile {
       @media (max-width: 2000px) {
       }
       @media (max-width: 767px) {
@@ -251,7 +247,6 @@ main {
 }
 
 .projects {
-  // background-color: rgb(133, 138, 208);
   padding-top: 64px;
   padding-bottom: 64px;
 
@@ -270,7 +265,6 @@ main {
     }
 
     .project {
-      // background-image: url("../images/project-img.jpg");
       border-radius: 16px;
       overflow: hidden;
 
