Updated codebase, minor errors that needed to be addressed. Also added in the typewriter animation

--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -6,7 +6,8 @@ main {
     display: flex;
     align-items: center;
 
-    background-image: url("../../assets/images/RedwoodsNationalPark.jpeg");
+    // background-image: url("../../assets/images/RedwoodsNationalPark.jpeg");
+    background-color: bisque;
     background-position: top right;
     background-size: cover;
 
@@ -55,6 +56,8 @@ main {
     }
 
     .infinite {
+      display: inline-block;
+
       &__title {
         padding: 0;
         margin: 0;
@@ -62,24 +65,36 @@ main {
         font-size: 60px;
         letter-spacing: 1px;
       }
+    }
 
-      &__rotate-text::before {
-        content: "";
-        animation: animate infinite 7s;
+    .typewriter h3 {
+      color: #fff;
+      overflow: hidden; /* Ensures the content is not revealed until the animation */
+      border-right: 0.15em solid orange; /* The typwriter cursor */
+      white-space: nowrap; /* Keeps the content on a single line */
+      margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+      letter-spacing: 0.18em; /* Adjust as needed */
+      animation: typing 3.5s steps(35, end), blink-caret 0.5s step-end infinite;
+    }
+
+    /* The typing effect */
+    @keyframes typing {
+      from {
+        width: 0;
       }
-      @keyframes animate {
-        0% {
-          content: "Develop!";
-        }
-        30% {
-          content: "Create!";
-        }
-        60% {
-          content: "Design!";
-        }
-        100% {
-          content: "Think!";
-        }
+      to {
+        width: 100%;
+      }
+    }
+
+    /* The typewriter cursor effect */
+    @keyframes blink-caret {
+      from,
+      to {
+        border-color: transparent;
+      }
+      50% {
+        border-color: orange;
       }
     }
   }
@@ -164,18 +179,16 @@ main {
     &__headshot {
       @media (max-width: 2000px) {
         border-radius: 50%;
-        width: 20rem;
+        width: 25rem;
       }
 
       @media (max-width: 767px) {
-        // border-radius: 50%;
-        // width: 20rem;
+        width: 20rem;
       }
 
       @media (max-width: 425px) {
         border-radius: 50%;
         width: 100%;
-        // padding: 2rem;
       }
     }
   }
