debug wrapper override. Had to adjust margin that was replacing my wrapper/centering

--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -196,7 +196,8 @@ main {
 
 .techstack {
   @media (max-width: 2000px) {
-    margin: 5rem 0;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
   }
 
   @media (max-width: 425px) {
