--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -294,6 +294,7 @@ main {
         color: #fff;
         padding: 16px;
         background-color: rgba(24, 195, 172, 0.8);
+        min-height: 18rem;
 
         // &__1 {
         //   background: no-repeat;
