--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -278,7 +278,8 @@ main {
     }
 
     .project {
-      border-radius: 16px;
+      box-shadow: 0 4px 20px -1px rgb(0 0 0 / 40%);
+      border-radius: 8px;
       overflow: hidden;
 
       &:hover {
@@ -291,8 +292,8 @@ main {
         filter: grayscale(1);
         transition: 0.4s;
         color: #fff;
-        background-color: rgba(24, 195, 172, 0.8);
-        height: 32rem;
+        background-color: rgba(24, 195, 98, 0.8);
+        height: 30rem;
 
         h3 {
           font-size: 32px;
@@ -312,18 +313,15 @@ main {
           }
         }
 
-        &__photocard {
-          height: 200px;
-        }
-
         &__photocard-img {
           width: 100%;
           object-fit: contain;
+          height: 100%;
         }
 
         &__photocard-text {
-          margin-top: 2rem;
           padding: 16px;
+          line-height: 1.4;
         }
       }
     }
