--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -136,10 +136,13 @@ header {
   width: 100%;
   min-height: 100vh;
   z-index: 99;
-  background-color: #000000;
-  opacity: 0.9;
+  background-color: rgb(0, 0, 0, 0.85);
   padding-top: 120px;
-  transition: 0.9s;
+  transition: 1s;
+
+  &__menu {
+    margin-top: 5rem;
+  }
 }
 
 .mobile-nav.is-active {
@@ -155,11 +158,11 @@ header {
   padding: 12px 16px;
   border-radius: 10px;
   cursor: pointer;
-  font-size: 24px;
+  font-size: 32px;
   color: #fff;
 }
 .mobile-navlink:hover {
-  border-bottom: 0.5px solid lightgreen;
+  color: rgb(93, 207, 131);
 }
 
 @media (min-width: 768px) {
