--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -204,7 +204,7 @@ main {
     margin-top: 3rem;
   }
 
-  // sizing the icon itself
+  // sizing the techstack icon itself
   &__icon {
     @media (max-width: 2000px) {
       width: 60%;
@@ -234,7 +234,7 @@ main {
     }
   }
 
-  // sizing the icon container itself
+  // sizing the techstack icon container itself
   &__service {
     display: flex;
     justify-content: center;
@@ -266,7 +266,7 @@ main {
   .projects-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 16px;
+    grid-gap: 20px;
     margin-bottom: 32px;
 
     @media (max-width: 768px) {
@@ -276,54 +276,58 @@ main {
     @media (max-width: 767px) {
       grid-template-columns: 1fr;
     }
+  }
+}
 
-    .project {
-      box-shadow: 0 4px 20px -1px rgb(0 0 0 / 40%);
-      border-radius: 8px;
-      overflow: hidden;
+.project {
+  position: relative;
+  overflow: scroll;
+  box-shadow: 0 4px 20px -1px rgb(0 0 0 / 40%);
+  border-radius: 8px;
 
-      &:hover {
-        .content {
-          filter: grayscale(0);
-        }
+  .content {
+    h3 {
+      font-size: 32px;
+      margin-bottom: 16px;
+
+      @media (max-width: 2000px) {
+        font-size: 28px;
       }
+    }
 
-      .content {
-        filter: grayscale(1);
-        transition: 0.4s;
-        color: #fff;
-        background-color: rgba(24, 195, 98, 0.8);
-        height: 30rem;
+    p {
+      font-size: 18px;
+      margin-bottom: 16px;
 
-        h3 {
-          font-size: 32px;
-          margin-bottom: 16px;
-
-          @media (max-width: 2000px) {
-            font-size: 28px;
-          }
-        }
-
-        p {
-          font-size: 18px;
-          margin-bottom: 16px;
-
-          @media (max-width: 2000px) {
-            font-size: 16px;
-          }
-        }
-
-        &__photocard-img {
-          width: 100%;
-          object-fit: contain;
-          height: 100%;
-        }
-
-        &__photocard-text {
-          padding: 16px;
-          line-height: 1.4;
-        }
+      @media (max-width: 2000px) {
+        font-size: 16px;
       }
+    }
+
+    &__photocard {
+      height: 15rem;
+    }
+
+    &__photocard-img {
+      width: 100%;
+      height: 100%;
+    }
+
+    &__photocard-text {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 35vh;
+      color: #fff;
+      background: rgba(0, 0, 0, 0.6);
+      padding: 16px;
+      line-height: 1.4;
+      opacity: 0;
+    }
+    :hover {
+      opacity: 1;
+      transition: 0.5s;
     }
   }
 }
