--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -13,45 +13,12 @@
 }
 
 @mixin button {
-  text-align: center;
-  text-transform: capitalize;
+  width: 5rem;
+  padding: 1rem;
   cursor: pointer;
-  width: 100%;
-  min-height: 2.5rem;
+  text-transform: capitalize;
   border: none;
-  border-radius: 1.5rem;
-}
-
-@mixin in-stock-button {
-  background-color: #15846312;
-  color: #158463;
-  padding: 0 .5rem;
-  height: 1.625rem;
-  width: 4rem;
-  border-radius: 1.25rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 0.813rem;
-  font-weight: 400;
-  line-height: 1.375rem;
-  margin-bottom: 1.25rem;
-}
-
-@mixin no-stock-button {
-  background-color: #C9451512;
-  color: #C94515;
-  padding: 0 .5rem;
-  height: 1.625rem;
-  width: 5.5rem;
-  border-radius: 1.25rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 0.813rem;
-  font-weight: 400;
-  line-height: 1.375rem;
-  margin-bottom: 1.25rem;
+  border-radius: 24px;
 }
 
 // --------------------------- Mixins ------------------>
