--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -1,3 +1,5 @@
+@use "../../styles/partials/_mixins.scss" as *;
+
 main {
   .banner {
     color: #fff;
@@ -310,7 +312,8 @@ main {
 
     &__photocard-img {
       width: 100%;
-      height: 100%;
+      height: 250px;
+      object-fit: cover;
     }
 
     &__photocard-text {
@@ -318,7 +321,8 @@ main {
       top: 0;
       left: 0;
       width: 100%;
-      height: 35vh;
+      height: 40vh;
+
       color: #fff;
       background: rgba(0, 0, 0, 0.6);
       padding: 16px;
@@ -327,7 +331,23 @@ main {
     }
     :hover {
       opacity: 1;
-      transition: 0.5s;
+      transition: 0.6s ease-out;
+    }
+  }
+}
+
+.buttonBase {
+  display: flex;
+  justify-content: space-between;
+  max-width: 50%;
+
+  &__button {
+    @include button;
+
+    &:hover {
+      color: #fff;
+      background-color: #000;
+      transition: 0.6s ease-out;
     }
   }
 }
