--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,21 +1,16 @@
 // Primary Colours
 $primary-black: #000000;
 $primary-white: #ffffff;
-$primary-honeydew: #e1f4e1;
-$background-beige: #f4e1be;
-$background-footer: #576873;
+$background-footer: #285276;
 
 // Secondary Colours
-$secondary-steelblue: #5995df;
-$secondary-lightblue: #9bc8e8;
 $secondary-slate: #5c667e;
 $secondary-cloud: #bdc5d5;
 $secondary-lightgrey: #f7f8f9;
-
-$secondary-navy: #13182c;
-$secondary-darknavy: #232940;
 $secondary-graphite: #323232;
 
-// Supporting Colours
+// CTA Colours
+$selector-green: rgb(22, 217, 87);
+$header-yellow: #fff200db;
 $supporting-green: #158463;
 $supporting-red: #c94515;
