--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@use "./styles/partials/_variables.scss" as *;
+
 * {
   margin: 0;
   padding: 0;
@@ -44,7 +46,6 @@ section {
   h2 {
     margin-bottom: 40px;
     text-transform: uppercase;
-    color: #313131;
     font-size: 36px;
     font-weight: 300;
   }
