--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -1,8 +1,9 @@
 @use "../../styles/partials/_mixins.scss" as *;
+@use "../../styles/partials/_variables.scss" as *;
 
 main {
   .banner {
-    color: #fff;
+    color: $primary-white;
     position: relative;
     min-height: 100vh;
     display: flex;
@@ -21,7 +22,7 @@ main {
       right: 0;
       bottom: 0;
       z-index: 0;
-      background-color: #000;
+      background-color: $primary-black;
       opacity: 0.1;
     }
 
@@ -34,7 +35,7 @@ main {
         margin-bottom: 32px;
 
         span {
-          color: #fff200db;
+          color: $header-yellow;
         }
 
         @media (max-width: 767px) {
@@ -62,14 +63,14 @@ main {
       &__title {
         padding: 0;
         margin: 0;
-        color: white;
+        color: $primary-white;
         font-size: 60px;
         letter-spacing: 1px;
       }
     }
 
     .typewriter h3 {
-      color: #fff;
+      color: $primary-white;
       overflow: hidden; /* Ensures the content is not revealed until the animation */
       border-right: 0.15em solid orange; /* The typwriter cursor */
       white-space: nowrap; /* Keeps the content on a single line */
@@ -101,13 +102,13 @@ main {
   }
 
   .about {
-    background-color: #fff;
+    background-color: $primary-white;
     border: 1px solid transparent;
 
     &__container {
       @media (max-width: 2000px) {
         padding-top: 2rem;
-        margin-top: 2rem;
+        margin-top: 4.5rem;
       }
 
       @media (max-width: 767px) {
@@ -122,10 +123,14 @@ main {
 
     &__content {
       display: flex;
+      flex-direction: column;
       justify-content: space-between;
+      align-items: center;
 
-      @media (max-width: 2000px) {
-        margin-top: 4rem;
+      @include desktop {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
       }
 
       @media (max-width: 767px) {
@@ -133,16 +138,13 @@ main {
         justify-content: space-between;
       }
 
-      @media (max-width: 425px) {
-      }
-
       &--text {
-        width: 50%;
+        @media (max-width: 2000px) {
+          margin-top: 5rem;
+        }
 
-        @media (max-width: 767px) {
-          width: 100%;
-          margin-top: 3rem;
-          order: 1;
+        @include desktop {
+          width: 60%;
         }
 
         @media (max-width: 425px) {
@@ -161,8 +163,6 @@ main {
     }
 
     &__profile {
-      @media (max-width: 2000px) {
-      }
       @media (max-width: 767px) {
         margin: 0 auto;
       }
@@ -241,11 +241,6 @@ main {
     display: flex;
     justify-content: center;
 
-    @media (max-width: 2000px) {
-    }
-    @media (max-width: 767px) {
-    }
-
     @media (max-width: 425px) {
       padding: 1rem;
       max-width: 100%;
@@ -316,22 +311,24 @@ main {
       object-fit: cover;
     }
 
-    &__photocard-text {
+    &__photocard-container {
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
       height: 40vh;
-
-      color: #fff;
+      color: $primary-white;
       background: rgba(0, 0, 0, 0.6);
-      padding: 16px;
       line-height: 1.4;
       opacity: 0;
     }
     :hover {
       opacity: 1;
       transition: 0.6s ease-out;
+    }
+
+    &__photocard-content {
+      padding: 1rem;
     }
   }
 }
@@ -345,8 +342,8 @@ main {
     @include button;
 
     &:hover {
-      color: #fff;
-      background-color: #000;
+      color: $primary-white;
+      background-color: $primary-black;
       transition: 0.6s ease-out;
     }
   }
