Added box-shadow to the header feature to give depth.

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -15,6 +15,7 @@ header {
     justify-content: space-between;
     align-items: center;
     background-color: $primary-white;
+    box-shadow: 0 4px 20px -1px rgb(0 0 0 / 40%);
 
     h2 {
       color: $primary-black;
