replaced naming convention, better suit the class

--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -340,7 +340,7 @@ main {
   }
 }
 
-.buttonBase {
+.button {
   display: flex;
   justify-content: space-between;
   width: 50%;
@@ -350,7 +350,7 @@ main {
     width: 70%;
   }
 
-  &__button {
+  &__link {
     @include button;
     text-align: center;
     font-size: 14px;
