Minor issue with the header component, had a max-width restricting past 1600px.

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -9,13 +9,14 @@ header {
   background-color: $primary-white;
 
   .container {
-    padding-top: 32px;
-    padding-bottom: 32px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: $primary-white;
     box-shadow: 0 4px 20px -1px rgb(0 0 0 / 40%);
+    padding: 0 3rem;
+    padding-top: 32px;
+    padding-bottom: 32px;
 
     h2 {
       color: $primary-black;
