Resized hero image from top to left

--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -10,7 +10,7 @@ main {
     align-items: center;
 
     background-image: url("../../assets/images/background.jpg");
-    background-position: right;
+    background-position: left;
     background-size: cover;
 
     &:after {
