refactored sizing and used aspect-ratio with a color-burn as well

--- a/src/components/Techstack/Techstack.scss
+++ b/src/components/Techstack/Techstack.scss
@@ -15,10 +15,9 @@
   // sizing the techstack icon itself
   &__icon {
     width: 7rem;
-
-    @media (max-width: 425px) {
-      width: 5rem;
-    }
+    aspect-ratio: 4/3;
+    object-fit: contain;
+    mix-blend-mode: color-burn;
   }
 
   &__services-grid {
