FR; style the background fixed for a better UX

--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -12,6 +12,7 @@ main {
     background-image: url("../../assets/images/background.jpg");
     background-position: left;
     background-size: cover;
+    background-attachment: fixed;
 
     &:after {
       content: "";
